syntax = "proto3";
package find_me_pls;

import "types.proto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply);
}


